kubernetes-challenge-01/assets/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend # <- Label important
  template:
    metadata:
      labels:
        app: backend # <- Label important
        # Label supplémentaire pour la NetworkPolicy (piège potentiel)
        role: database-server
    spec:
      containers:
      - name: backend-container
        image: alterway/nginx-challenge:1.0
        ports:
        - containerPort: 80 # Le conteneur écoute sur le port 80
