kubernetes-challenge-01/assets/backend-netpol-broken.yaml
# backend-netpol-broken.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-frontend
spec:
  podSelector: 
    matchLabels:
      app: backend
  policyTypes:
  - Ingress 
  ingress:
  - from: 
    - podSelector: 
        matchLabels:
          app: frontend-access
    ports: 
    - protocol: TCP
      port: 80
